tests/files/type_checker_tests/should_pass/021.cmdr
//Test bindings type check
x = (1, 2.0, true, "hi");
y = x;
