tests/files/type_checker_tests/should_fail/188.cmdr
//Should fail calling non existing function
println "hi".foo(1, 2);
